--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,15 @@ chardet==3.0.4
 colorama==0.4.1
 defusedxml==0.5.0
 diff-match-patch==20181111
+dj-database-url==0.5.0
 Django==2.1.4
 django-braces==1.13.0
+django-heroku==0.3.1
 django-import-export==1.2.0
 django-model-utils==3.1.2
-django-torrent-stream==0.9.3
+
 et-xmlfile==1.0.1
+gunicorn==19.9.0
 idna==2.8
 isort==4.3.8
 jdcal==1.4
@@ -18,6 +21,7 @@ mccabe==0.6.1
 mysqlclient==1.4.1
 odfpy==1.4.0
 openpyxl==2.6.0
+psycopg2==2.7.7
 pylint==2.2.2
 pylint-django==2.0.5
 pylint-plugin-utils==0.4
@@ -30,6 +34,7 @@ tablib==0.12.1
 unicodecsv==0.14.1
 urllib3==1.24.1
 virtualenv==16.4.3
+whitenoise==4.1.2
 wincertstore==0.2
 wrapt==1.11.1
 xlrd==1.2.0
