--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ django-braces==1.13.0
 django-heroku==0.3.1
 django-import-export==1.2.0
 django-model-utils==3.1.2
-
+djangorestframework==3.10.2
 et-xmlfile==1.0.1
 gunicorn==19.9.0
 idna==2.8
